--- a/index.html
+++ b/index.html
@@ -2,21 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Meal Planner</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Meal Planner – Welcome</title>
+    <link rel="stylesheet" href="/public/css/layout.css">
 </head>
-
 <body>
-    <header>
-        <nav>
-            <a href="pages/planner.html">Meal Planner</a>
-            <a href="pages/recipes.html">Recipes</a>
-            <a href="pages/grocery.html">Grocery List</a>
-        </nav>
-    </header>
 
-    <main id="app"></main>
+<header class="site-header">
+    <h1>Meal Planner</h1>
+</header>
 
-    <script type="module" src="../main.js"></script>
+<main>
+    <h2>Welcome</h2>
+    <p>This is the landing page. Use the links below to enter the app.</p>
+
+    <nav class="landing-nav">
+        <a class="btn" href="/pages/index.html">Enter App</a>
+    </nav>
+</main>
+
+<script type="module" src="main.js"></script>
 </body>
 </html>
