--- a/pages/index.html
+++ b/pages/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Meal Planner – Home</title>
-    <link rel="stylesheet" href="/public/css/layout.css">
+    <link rel="stylesheet" href="../public/css/layout.css">
 </head>
 <body>
 <header class="site-header">
     <h1>Meal Planner</h1>
     <nav>
-        <a href="/pages/index.html" id="nav-home">Home</a>
-        <a href="/pages/recipes.html" id="nav-recipes">Recipes</a>
-        <a href="/pages/planner.html" id="nav-planner">Planner</a>
-        <a href="/pages/grocery.html" id="nav-grocery">Grocery</a>
-        <a href="/pages/admin.html" id="nav-admin">Admin</a>
+        <a href="../pages/index.html" id="nav-home">Home</a>
+        <a href="../pages/recipes.html" id="nav-recipes">Recipes</a>
+        <a href="../pages/planner.html" id="nav-planner">Planner</a>
+        <a href="../pages/grocery.html" id="nav-grocery">Grocery</a>
+        <a href="../pages/admin.html" id="nav-admin">Admin</a>
     </nav>
 </header>
 
@@ -22,16 +22,16 @@
         <div class="hero-content">
             <h2>Plan Your Week With Ease</h2>
             <p>Search recipes, build your weekly meal plan, and create your grocery list — all in one place.</p>
-            <a href="/pages/recipes.html" class="btn hero-btn">Start Planning</a>
+            <a href="../pages/recipes.html" class="btn hero-btn">Start Planning</a>
         </div>
 
         <div class="hero-image">
-            <img src="/public/assets/images/hero.jpg" alt="Healthy meal ingredients">
+            <img src="../public/assets/images/hero.jpg" alt="Healthy meal ingredients">
         </div>
     </section>
 </main>
 
 
-<script type="module" src="/public/js/modules/ui.js"></script>
+<script type="module" src="../public/js/modules/ui.js"></script>
 </body>
 </html>
