--- a/pages/planner.html
+++ b/pages/planner.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Meal Planner – Planner</title>
-    <link rel="stylesheet" href="/public/css/layout.css">
+    <link rel="stylesheet" href="../public/css/layout.css">
 </head>
 <body>
 <header class="site-header">
     <h1>Meal Planner</h1>
     <nav>
-        <a href="/pages/index.html" id="nav-home">Home</a>
-        <a href="/pages/recipes.html" id="nav-recipes">Recipes</a>
-        <a href="/pages/planner.html" id="nav-planner">Planner</a>
-        <a href="/pages/grocery.html" id="nav-grocery">Grocery</a>
-        <a href="/pages/admin.html" id="nav-admin">Admin</a>
+        <a href="../pages/index.html" id="nav-home">Home</a>
+        <a href="../pages/recipes.html" id="nav-recipes">Recipes</a>
+        <a href="../pages/planner.html" id="nav-planner">Planner</a>
+        <a href="../pages/grocery.html" id="nav-grocery">Grocery</a>
+        <a href="../pages/admin.html" id="nav-admin">Admin</a>
     </nav>
 </header>
 
@@ -25,7 +25,7 @@
     <section id="planner"></section>
 </main>
 
-<script type="module" src="/public/js/modules/mealPlanner.js"></script>
-<script type="module" src="/public/js/modules/ui.js"></script>
+<script type="module" src="../public/js/modules/mealPlanner.js"></script>
+<script type="module" src="../public/js/modules/ui.js"></script>
 </body>
 </html>
