--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Meal Planner – Welcome</title>
-    <link rel="stylesheet" href="/public/css/layout.css">
+    <link rel="stylesheet" href="public/css/layout.css">
 </head>
 <body>
 
@@ -16,7 +16,7 @@
     <p>This is the landing page. Use the links below to enter the app.</p>
 
     <nav class="landing-nav">
-        <a class="btn" href="/pages/index.html">Enter App</a>
+        <a class="btn" href="pages/index.html">Enter App</a>
     </nav>
 </main>
 
