--- a/pages/planner.html
+++ b/pages/planner.html
@@ -9,7 +9,7 @@
 <header class="site-header">
     <h1>Meal Planner</h1>
     <nav>
-        <a href="../pages/index.html" id="nav-home">Home</a>
+        <a href="../index.html" id="nav-home">Home</a>
         <a href="../pages/recipes.html" id="nav-recipes">Recipes</a>
         <a href="../pages/planner.html" id="nav-planner">Planner</a>
         <a href="../pages/grocery.html" id="nav-grocery">Grocery</a>
