--- a/pages/recipes.html
+++ b/pages/recipes.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Meal Planner – Recipes</title>
-    <link rel="stylesheet" href="../public/css/layout.css">
+    <link rel="stylesheet" href="../css/layout.css">
 </head>
 <body>
 <header class="site-header">
     <h1>Meal Planner</h1>
     <nav>
         <a href="../index.html" id="nav-home">Home</a>
-        <a href="../pages/recipes.html" id="nav-recipes">Recipes</a>
-        <a href="../pages/planner.html" id="nav-planner">Planner</a>
-        <a href="../pages/grocery.html" id="nav-grocery">Grocery</a>
-        <a href="../pages/admin.html" id="nav-admin">Admin</a>
+        <a href="recipes.html" id="nav-recipes">Recipes</a>
+        <a href="planner.html" id="nav-planner">Planner</a>
+        <a href="grocery.html" id="nav-grocery">Grocery</a>
+        <a href="admin.html" id="nav-admin">Admin</a>
     </nav>
 </header>
 
@@ -34,7 +34,7 @@
     </div>
 </div>
 
-<script type="module" src="../public/js/modules/recipeSearch.js"></script>
-<script type="module" src="../public/js/modules/ui.js"></script>
+<script type="module" src="../js/modules/recipeSearch.js"></script>
+<script type="module" src="../js/modules/ui.js"></script>
 </body>
 </html>
