--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Meal Planner – Home</title>
-    <link rel="stylesheet" href="../public/css/layout.css">
+    <link rel="stylesheet" href="css/layout.css">
 </head>
 <body>
 <header class="site-header">
@@ -26,12 +26,12 @@
         </div>
 
         <div class="hero-image">
-            <img src="../public/assets/images/hero.jpg" alt="Healthy meal ingredients">
+            <img src="assets/images/hero.jpg" alt="Healthy meal ingredients">
         </div>
     </section>
 </main>
 
 
-<script type="module" src="../public/js/modules/ui.js"></script>
+<script type="module" src="js/modules/ui.js"></script>
 </body>
 </html>
