--- a/pages/planner.html
+++ b/pages/planner.html
@@ -12,7 +12,7 @@
         <a href="../index.html" id="nav-home">Home</a>
         <a href="recipes.html" id="nav-recipes">Recipes</a>
         <a href="planner.html" id="nav-planner">Planner</a>
-        <a href="pages/grocery.html" id="nav-grocery">Grocery</a>
+        <a href="grocery.html" id="nav-grocery">Grocery</a>
         <a href="admin.html" id="nav-admin">Admin</a>
     </nav>
 </header>
