--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <header class="site-header">
     <h1>Meal Planner</h1>
     <nav>
-        <a href="../index.html" id="nav-home">Home</a>
-        <a href="../pages/recipes.html" id="nav-recipes">Recipes</a>
-        <a href="../pages/planner.html" id="nav-planner">Planner</a>
-        <a href="../pages/grocery.html" id="nav-grocery">Grocery</a>
-        <a href="../pages/admin.html" id="nav-admin">Admin</a>
+        <a href="index.html" id="nav-home">Home</a>
+        <a href="pages/recipes.html" id="nav-recipes">Recipes</a>
+        <a href="pages/planner.html" id="nav-planner">Planner</a>
+        <a href="pages/grocery.html" id="nav-grocery">Grocery</a>
+        <a href="pages/admin.html" id="nav-admin">Admin</a>
     </nav>
 </header>
 
@@ -22,7 +22,7 @@
         <div class="hero-content">
             <h2>Plan Your Week With Ease</h2>
             <p>Search recipes, build your weekly meal plan, and create your grocery list — all in one place.</p>
-            <a href="../pages/recipes.html" class="btn hero-btn">Start Planning</a>
+            <a href="pages/recipes.html" class="btn hero-btn">Start Planning</a>
         </div>
 
         <div class="hero-image">
